--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
             <div id="game-container">
                 <div class="message-box" id="message-box">
-                    🌸 Halo sayang Sasa Luvv! 🌸<br>
+                    🌸 Halo Sasa Sayangg Luvv youu xixi! 🌸<br>
                     Mari main game memory bersama Aii! 💕<br>
                     Temukan pasangan karakter yang sama ya kiww! 🎮✨
                 </div>
